...
    ) { paddingValues ->
        LazyColumn(
            contentPadding = PaddingValues(bottom = 128.dp),
            modifier = Modifier
                .padding(paddingValues)
                .fillMaxSize()
                .testTag("import_list")
        ) {
            items(tracks) { track ->
                val type = typeMapping[track.track.type]
                TrackView(
                    track = track,
                    selectedType = type,
...
        return@remember result.ok() to result.err()
    }

    Box(
        modifier = Modifier
            .clickable { dialogOpen = true }
            .testTag("import_list_item")) {
        if (richActivity != null) {
            CompactActivityCard(
                richActivity = richActivity,
                expand = true
            )
        } else {
...
