<resources>
    <string name="app_name">Fitness Calendar</string>
    <string name="github_url" translatable="false">https://github.com/Inky-developer/FitnessCalendar</string>

    <string name="Menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="today">Today</string>
    <string name="action_new_activity">Add new activity</string>
    <string name="activity_cycling">Cycling</string>
    <string name="activity_running">Running</string>
    <string name="back">Back</string>
    <string name="datetime_date">Date: %1$s %2$s</string>
    <string name="datetime_start">Start: %1$s %2$s</string>
    <string name="duration">Duration: %1$s</string>
    <string name="start_time">Start time: %1$s</string>
    <string name="datetime_end">End: %1$s %2$s</string>
    <string name="edit_object">Edit %1$s</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_activity">Delete activity</string>
    <string name="info">Info</string>
    <string name="no_activities_yet">No activities yet</string>
    <string name="activity_commute_home_to_work">Home → Work</string>
    <string name="activity_commute_work_to_home">Work → Home</string>
    <string name="placeholder_description">Description…</string>
    <string name="vehicle_train">Train</string>
    <string name="vehicle_car">Car</string>
    <string name="vehicle_bike">Bike</string>
...
    <string name="activity_note">Note</string>
    <string name="filter">filter</string>
    <string name="search_for_activity">Search for activity</string>
    <string name="no_activities_with_filter">No activities that match the filter</string>
    <string name="reset_filters">Reset filters</string>
    <string name="import_activities">Import activities</string>
    <string name="activity_log">Activity Log</string>
    <string name="last_seven_days">7 Days</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="other">Other</string>
    <string name="work">Work</string>
    <string name="gaming">Gaming</string>
...
    <string name="feel_good">Good</string>
    <string name="feel_bad">Bad</string>
    <string name="feel_ok">OK</string>
    <string name="select_feel">Select Feel…</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="statistics">Statistics</string>
    <string name="number_of_activities">Number of activities</string>
    <string name="day">Day</string>
    <string name="time_period">Time period</string>
    <string name="by_total_activities">Total Activities</string>
    <string name="by_total_time">Total Time</string>
    <string name="total_hours">Total Hours</string>
    <string name="average_hours">Average Hours</string>
    <string name="by_average_time">Average Time</string>
    <string name="jump_to">Jump To</string>
    <string name="entertainment">Entertainment</string>
    <string name="film">Film</string>
    <string name="health_note">Health</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="years">Years</string>
    <string name="filter_activity_category">Filter activity category</string>
    <string name="filter_all">All</string>
    <string name="add_image">Add image</string>
...
    <string name="place">Place</string>
    <string name="select_place">Select Place…</string>
    <string name="filter_by_places">Filter by places…</string>
    <string name="undo">Undo</string>
    <string name="recent_activity">Recent activity</string>
    <string name="no_place">No place</string>
    <string name="no_notes_for_day">No notes on that day</string>
    <string name="number_of_activities_n">Number of activities: %1s</string>
    <string name="show_day">Show day</string>

    <plurals name="num_activities">
        <item quantity="one">%1d activity</item>
        <item quantity="other">%1d activities</item>
...
        <item quantity="one">Stopped %1$d recording</item>
        <item quantity="other">Stopped %1$d recordings</item>
    </plurals>

    <string name="title_activity_import">Import activities</string>
    <string name="click_to_set_type">Click to set type…</string>
    <string name="confirm_import">Import</string>
    <string name="choose_activity_type">Choose activity type</string>
    <string name="could_not_read_input_file">Could not read input file</string>
    <string name="track">Track</string>
    <string name="filter_by_vehicles">Filter by vehicles…</string>
    <string name="filter_by_feels">Filter by feels…</string>
    <string name="configure_backup">Backup…</string>
...
