...
            state = activityListState,
            modifier = Modifier.padding(innerPadding),
            contentPadding = PaddingValues(bottom = 128.dp),
            reverseLayout = false
        ) {
            items(activities, key = { it.uid ?: -1 }) { activity ->
                ActivityCard(
                    activity,
                    onDelete = {
                        scope.launch { viewModel.repository.deleteActivity(activity) }
                    },
                    onEdit = onEditActivity,
                    localizationRepository = viewModel.repository.localizationRepository,
...
