...
                    horizontalArrangement = Arrangement.Center,
                    modifier = Modifier
                        .fillMaxWidth()
                        .background(MaterialTheme.colorScheme.surface)
                ) {
                    for (period in Period.entries) {
                        DateFilterChip(
                            selected = state.period == period,
                            onSelect = { onPeriod(period) },
                            label = { Text(stringResource(period.nameId)) }
                        )
                    }
                }
...
